update and fix usage endpoints
